# PenguinCAM

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE.txt  Makefile  PenguinCAM-config-template.yaml  PenguinCAM-config.yaml  README.md  ROADMAP.md  app.py  debug_onshape.py  frc_cam_gui_app.py  frc_cam_postprocessor.py  google_drive_integration.py  machine_config.json  onshape_config.json  onshape_integration.py  penguincam_auth.py  pyproject.toml  requirements.txt  team_config.py  vercel.json
docs/: AUTHENTICATION_GUIDE.md  DEPLOYMENT_GUIDE.md  INTEGRATIONS_GUIDE.md  MULTI_TEAM_ARCHITECTURE.md  TUBE_FACING_DESIGN.md
static/: app.js  eula.txt  onshape_panel.js  style.css
templates/: index.html  onshape_panel.html
tests/: test_tube_facing.py  test_unit.py
