[project]
name = "penguincam"
version = "1.0.0"
description = "FRC Team 6238 Popcorn Penguins CAM Post-Processor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ezdxf>=1.0.0",
    "shapely>=2.0.0",
    "Flask>=3.0.0",
    "flask-limiter>=4.0.0",
    "requests>=2.31.0",
    "gunicorn>=21.2.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]

[project.optional-dependencies]
test = [
    "pygcode>=0.2.0",
    "termcolor>=2.0.0",
]
